--- a/RaddioButton1/app/src/main/res/layout/activity_main.xml
+++ b/RaddioButton1/app/src/main/res/layout/activity_main.xml
@@ -32,13 +32,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="男" />
+            android:text="@string/male" />
 
         <RadioButton
             android:id="@+id/rdbGirl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="女" />
+            android:text="@string/female" />
     </RadioGroup>
 
     <RadioGroup
@@ -55,19 +55,19 @@
             android:id="@+id/rdbAdult"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="全票" />
+            android:text="@string/regularticket" />
 
         <RadioButton
             android:id="@+id/rdbChild"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="兒童票" />
+            android:text="@string/childticket" />
 
         <RadioButton
             android:id="@+id/rdbStudent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="學生票" />
+            android:text="@string/studentticket" />
     </RadioGroup>
 
     <Button
