--- a/0509/SpinnerDemo/app/src/main/res/layout/activity_main.xml
+++ b/0509/SpinnerDemo/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,9 @@
         android:id="@+id/spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         android:entries="@array/steaks"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
