--- a/0516/MenuDemo/app/src/main/res/layout/activity_main.xml
+++ b/0516/MenuDemo/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:text="TextView"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTemp" />
 
